--- a/html/modal.html
+++ b/html/modal.html
@@ -27,7 +27,7 @@
 						class="btn btn-secondary px-4" 
 						data-bs-dismiss="modal"
 						ng-if="$root.message.event">
-					Mégsem
+					Mégse
 				</button>
 			</div>
 		</div>
